update m68k cpu to match current upstream code, which includes a handful of bug fixes (mostly timing related).

--- a/cpu/CMakeLists.txt
+++ b/cpu/CMakeLists.txt
@@ -3,6 +3,11 @@ if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
 	set(CMAKE_CXX_FLAGS "-Wall -Wno-unused-function")
 endif()
 
+if ("${CMAKE_C_COMPILER_ID}" MATCHES "Clang")
+	# Clang or AppleClang
+	set(CMAKE_C_FLAGS "-Wall -Wno-unused-function")
+endif()
+
 set(CPU_SRC 
 	CpuModule.c 
 	CpuModule_Disassembler.c 
